--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,7 @@
 
 :root {
   --blackRussian: #1f1f26;
+  --medGray: #3a3a3c;
   --greyWhite: #f9f9f9;
   --pacificBlue: #c3f2fc;
     --medBlue: #1ebcfb;
