--- a/client/src/components/Trending/Trending.css
+++ b/client/src/components/Trending/Trending.css
@@ -28,14 +28,21 @@
     padding: 16px 0;
     line-height: 1.9;
 }
-.trend-item-content h4:first-of-type{
+.trend-item-title{
     font-size: 22px;
     font-family: 'Fira Sans', sans-serif;
     opacity: 0.8;
 }
-.trend-item-content h4:last-of-type{
+.trend-item-price{
     font-weight: 600;
     font-size: 20px;
+}
+
+.tren-item-description{
+    font-size: 12px;
+    color: var(--blackRussian);
+    opacity: 0.7;
+    margin-top: 12px;
 }
 .chevron-icon{
     background: var(--blackRussian);
@@ -77,10 +84,10 @@
         margin: 20px 0;
         padding: 20px 12px;
     }
-    .trend-item-content h4:first-of-type{
+    .trend-item-title{
         font-size: 18px;
     }
-    .trend-item-content h4:last-of-type{
+    .trend-item-price{
         font-size: 16px;
     }
     
